- Add Passbook logic

--- a/project/PassbookManagement.csproj
+++ b/project/PassbookManagement.csproj
@@ -55,7 +55,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="SDictionary.cs" />
+    <Compile Include="PassbookModel.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SQLiteDatabase.cs" />
