--- a/project/PassbookManagement.csproj
+++ b/project/PassbookManagement.csproj
@@ -59,6 +59,12 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SQLiteDatabase.cs" />
+    <Compile Include="src\EditCondition.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="src\EditCondition.Designer.cs">
+      <DependentUpon>EditCondition.cs</DependentUpon>
+    </Compile>
     <Compile Include="src\Passbook.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -73,7 +79,11 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="src\EditCondition.resx">
+      <DependentUpon>EditCondition.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="src\Passbook.resx">
       <DependentUpon>Passbook.cs</DependentUpon>
     </EmbeddedResource>
@@ -90,6 +100,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\logo_512.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
