--- a/project/PassbookManagement.csproj
+++ b/project/PassbookManagement.csproj
@@ -37,7 +37,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="MaterialSkin">
-      <HintPath>..\..\MaterialSkin\MaterialSkin\bin\Release\MaterialSkin.dll</HintPath>
+      <HintPath>..\lib\MaterialSkin.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
