--- a/project/PassbookManagement.csproj
+++ b/project/PassbookManagement.csproj
@@ -64,11 +64,11 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SQLiteDatabase.cs" />
-    <Compile Include="src\EditCondition.cs">
+    <Compile Include="src\Dashboard.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="src\EditCondition.Designer.cs">
-      <DependentUpon>EditCondition.cs</DependentUpon>
+    <Compile Include="src\Dashboard.Designer.cs">
+      <DependentUpon>Dashboard.cs</DependentUpon>
     </Compile>
     <Compile Include="src\LoginForm.cs">
       <SubType>Form</SubType>
@@ -93,8 +93,8 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
-    <EmbeddedResource Include="src\EditCondition.resx">
-      <DependentUpon>EditCondition.cs</DependentUpon>
+    <EmbeddedResource Include="src\Dashboard.resx">
+      <DependentUpon>Dashboard.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="src\LoginForm.resx">
       <DependentUpon>LoginForm.cs</DependentUpon>
