--- a/project/PassbookManagement.csproj
+++ b/project/PassbookManagement.csproj
@@ -35,6 +35,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>main.ico</ApplicationIcon>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="MaterialSkin">
       <HintPath>..\lib\MaterialSkin.dll</HintPath>
@@ -118,7 +121,11 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\logo_512.png" />
+    <Content Include="icon.ico" />
+    <Content Include="main.ico" />
+    <Content Include="Resources\dashboard.ico" />
+    <Content Include="Resources\login.ico" />
+    <Content Include="Resources\main.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
